hphp/test/zend/good/ext/standard/tests/image/getimagesize_wbmp.php.skipif
<?hh
<<__EntryPoint>> function main(): void {
if (!defined("IMAGETYPE_WBMP")) {
    die("skip wbmp file format is not available");
}
}
