hphp/test/zend/bad/ext/standard/tests/image/getimagesize_wbmp.php.skipif
<?php
	if (!defined("IMAGETYPE_WBMP")) {
		die("skip wbmp file format is not available");
	}
?>